# Phytium-VM

docs/: output_encryption.md  security_flow.md
tscvee/: Android.mk  CMakeLists.txt
tscvee/host/: Makefile  main.c
tscvee/include/: tsc_privkey.h
tscvee/ta/: Android.mk  Makefile  sub.mk  tsc_vee_ta.c  user_ta_header_defines.h
tscvee/ta/include/: analysis.h  analysis_impl.h  evmc.h  execution.h  execution_state.h  hex_helpers.h  instructions.h  mocked_host.h  sha3.h  tsc_vee_ta.h  uint256.h  vm.h
tscvee/ta/src/: uint256.c
tscvee/ta/stc/: ccommon.h  cstr.h  utf8.h
tscvee/tests/: Makefile  local_crypto_test  local_crypto_test.c  test.json
